# SkyproProject

./: .env.example  .flake8  README.md  docker-compose.yaml  manage.py  my_dump.sql  pyproject.toml
SkyproProject/: asgi.py  settings.py  urls.py  wsgi.py
poetry_scripts/scripts/: test.py
resumes/: admin.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
resumes/migrations/: 0001_initial.py
